[package]
name = "solana-tss-api-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.14.17"
solana-sdk = "^1.18.26"
spl-memo = "3"
bs58 = "0.4"
rand07 = { package = "rand", version = "0.7" }
ed25519-dalek = "1"
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", rev = "4b5e5c8d8e92f94eed38b037e0d83ad0d2a144ea" }
curv = { package = "curv-kzen", version = "0.9" }
poem = { version = "3.0", features = ["anyhow"] }
poem-openapi = { version = "5.0", features = ["swagger-ui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

spl-token = "3.5"
spl-associated-token-account = "1.1"

[dev-dependencies]
solana-test-validator = "1.14.7"
solana-streamer = "1.14.7"
